# zebra

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  test-db.ts  tsconfig.json  turbo.json
apps/web/: build_error.txt  next.config.mjs  package.json  tailwind.config.ts  temp_auth.html  temp_dashboard.html  temp_feature1.html  temp_feature2.html  temp_feature3.html  temp_feature4.html  temp_hero.html  temp_pricing.html  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/analysis/[id]/: route.ts
apps/web/src/app/api/compile-latex/: route.ts
apps/web/src/app/api/debug/pipeline/[analysisId]/: route.ts
apps/web/src/app/api/generate-resume/: route.ts
apps/web/src/app/api/health/: route.ts
apps/web/src/app/api/resumes/: route.ts
apps/web/src/app/api/resumes/[id]/versions/: route.ts
apps/web/src/app/auth/: page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/demo/: DemoClient.tsx  page.tsx
apps/web/src/app/fix-resume/: page.tsx
apps/web/src/app/import/: page.tsx
apps/web/src/app/pricing/: page.tsx
apps/web/src/app/tailor/: page.tsx
services/worker/: Dockerfile  pyproject.toml
services/worker/src/: db.py  jobs.py  main.py  worker.py
